--- a/RainbowStars4Egret/manifest.json
+++ b/RainbowStars4Egret/manifest.json
@@ -6,13 +6,17 @@
 		"libs/modules/assetsmanager/assetsmanager.js",
 		"libs/modules/tween/tween.js",
 		"libs/modules/game/game.js",
-		"libs/modules/promise/promise.js"
+		"libs/modules/promise/promise.js",
+		"egretad/bin/egretad.js"
 	],
 	"game": [
+		"bin-debug/game/Ball.js",
 		"bin-debug/AssetAdapter.js",
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
-		"bin-debug/ThemeAdapter.js"
+		"bin-debug/ThemeAdapter.js",
+		"bin-debug/game/Cursor.js",
+		"bin-debug/game/Game.js"
 	]
 }
