--- a/RainbowStars4Egret/manifest.json
+++ b/RainbowStars4Egret/manifest.json
@@ -16,7 +16,9 @@
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
 		"bin-debug/ThemeAdapter.js",
+		"bin-debug/com/ColorMatrix.js",
 		"bin-debug/game/Cursor.js",
-		"bin-debug/game/Game.js"
+		"bin-debug/game/Game.js",
+		"bin-debug/sound/SoundManager.js"
 	]
 }
