--- a/RainbowStars4Egret/manifest.json
+++ b/RainbowStars4Egret/manifest.json
@@ -11,14 +11,21 @@
 	],
 	"game": [
 		"bin-debug/game/Ball.js",
-		"bin-debug/AssetAdapter.js",
+		"bin-debug/game/Cursor.js",
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/Platform.js",
 		"bin-debug/ThemeAdapter.js",
 		"bin-debug/com/ColorMatrix.js",
-		"bin-debug/game/Cursor.js",
+		"bin-debug/App.js",
+		"bin-debug/AssetAdapter.js",
 		"bin-debug/game/Game.js",
+		"bin-debug/game/GameData.js",
+		"bin-debug/game/GameResultPanel.js",
+		"bin-debug/game/LevelItem.js",
+		"bin-debug/game/LevelsPanel.js",
+		"bin-debug/game/ScorePanel.js",
+		"bin-debug/game/StartPanel.js",
 		"bin-debug/sound/SoundManager.js"
 	]
 }
