--- a/RainbowStars4Egret_wxgame/project.config.json
+++ b/RainbowStars4Egret_wxgame/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "game",
 	"libVersion": "game",
-	"appid": "wx6ac3f5090a6b99c5",
-	"projectname": "teststart",
+	"appid": "wxe6c30b3e49cde418",
+	"projectname": "%E9%AD%94%E5%B9%BB%E6%98%9F%E6%98%9F",
 	"condition": {
 		"search": {
 			"current": -1,
